Fix spacing

--- a/public/style.css
+++ b/public/style.css
@@ -748,8 +748,8 @@ video {
   margin-top: 2.75rem;
 }
 
-.mt-16{
-  margin-top: 4rem;
+.mt-12{
+  margin-top: 3rem;
 }
 
 .mt-2{
@@ -1669,11 +1669,6 @@ video {
     margin-right: auto;
   }
 
-  .md\:my-20{
-    margin-top: 5rem;
-    margin-bottom: 5rem;
-  }
-
   .md\:mb-16{
     margin-bottom: 4rem;
   }
@@ -1688,6 +1683,10 @@ video {
 
   .md\:mt-0{
     margin-top: 0px;
+  }
+
+  .md\:mt-16{
+    margin-top: 4rem;
   }
 
   .md\:mt-28{
@@ -1880,11 +1879,6 @@ video {
 }
 
 @media (min-width: 1024px){
-  .lg\:mx-20{
-    margin-left: 5rem;
-    margin-right: 5rem;
-  }
-
   .lg\:mx-44{
     margin-left: 11rem;
     margin-right: 11rem;
@@ -1931,6 +1925,10 @@ video {
 }
 
 @media (min-width: 1280px){
+  .xl\:mt-20{
+    margin-top: 5rem;
+  }
+
   .xl\:max-w-lg{
     max-width: 32rem;
   }
@@ -1955,21 +1953,16 @@ video {
 }
 
 @media (min-width: 1536px){
-  .\32xl\:mx-44{
-    margin-left: 11rem;
-    margin-right: 11rem;
-  }
-
-  .\32xl\:mb-20{
-    margin-bottom: 5rem;
-  }
-
   .\32xl\:mb-32{
     margin-bottom: 8rem;
   }
 
   .\32xl\:mt-20{
     margin-top: 5rem;
+  }
+
+  .\32xl\:mt-28{
+    margin-top: 7rem;
   }
 
   .\32xl\:mt-40{
